syntax = "proto3";

package proto;

message ProtoMessage {
  string uuid = 1;
  string sender_uuid = 2;
  int64 timestamp = 3;
  string room_uuid = 4;
  string source_endpoint= 5;

  oneof msg_type {
    TextMessage text = 6;
    AckMessage ack = 7;
    FileMessage file = 8;
  }
}

message FileMessage {
  string name = 1;
  bytes data = 2;
}

message TextMessage {
  string text = 1;
}

message AckMessage {
  string message_uuid = 1;
}
